# talent-lens-poc

./: .env.example  .gitignore
backend/: .env.example  .gitignore  00-parse-job-desc.py  01-parse-resume.py  02-fit-score.py  README.md  pyproject.toml  requirements.txt
backend-core/: .env.example  02-fit-score.py  pyproject.toml  setup.py
backend-core/utils/: prompting_instructions.py  resume_schema.py  setup_directories.py
backend/app/: main.py
backend/app/api/v1/: api.py  routes.py
backend/app/api/v1/endpoints/: analysis.py  uploads.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  mongodb.py
backend/app/scripts/: parse_resume.py
backend/app/services/: analysis_service.py  analytics.py  llama_parser.py  openai_service.py  parser_service.py  resume_processor.py  search.py  storage_service.py
backend/app/utils/: prompting_instructions.py  resume_schema.py
backend/doc_job_desc/: JD-Data-Engineer.txt
backend/relevance_score/: fit_score_370DA231-9DCA-403A-8F51-B19E997C15B8.json  fit_score_533FF7EA-28C0-4704-B34F-9CCE24BA86D7.json  fit_score_Bala Kumar_DE_Bkk.json  fit_score_Phuvit Jaruratkit_Resume 1.json  fit_score_ResumeSTOLFI.json
backend/tests/: test_nest_asyncio.py
backend/utils/: openai_converter.py  parsing_instructions.py  prompting_instructions.py  resume_schema.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/add-professional/: page.tsx
frontend/app/analysis/: page.tsx
frontend/app/components/: layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lib/: api-client.ts
frontend/app/resume-analysis/: page.tsx
frontend/app/search-network/: page.tsx
frontend/components/: analysis-results.tsx  custom-progress.tsx  dashboard.tsx  evaluation-criteria-config.tsx  file-upload.tsx  job-description-module.tsx  resume-upload.tsx
frontend/lib/: api-client.ts
