[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend-core"
version = "0.1.0"
description = "Core utilities for TalentLens backend"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "backend_core", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
llama-parse = "^0.1.38"
openai = "^1.3.5"