[tool.poetry]
name = "resume-parser"
version = "0.1.0"
description = "A resume parsing and job matching system using LlamaParse and OpenAI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
llama-parse = "*"
python-dotenv = "*"
openai = "*"
pydantic = "*"
colorama = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 